user bulk-delete api added(stab)
