# platform_root/platform_api/swagger/swagger.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Exastro Platform API
   description: Exastro Platform API
-  version: 1.8.2
+  version: 1.9.0
 servers:
 - url: "https://{host}"
   description: API endpoint
@@ -2038,11 +2038,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/runtimeError'
       x-openapi-router-controller: controllers.role_mappings_service_controller
-  /api/{organization_id}/platform/jobs/users/import:
+  /api/{organization_id}/platform/jobs/users/bulk-import:
     post:
       tags:
       - JobsService
-      summary: Import user bulk registration
+      summary: Bulk import user job call
       operationId: jobs_users_import
       parameters:
       - name: organization_id
@@ -2056,7 +2056,41 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/users_import_body'
+              $ref: '#/paths/~1api~1%7Borganization_id%7D~1platform~1jobs~1users~1bulk-delete/post/requestBody/content/multipart~1form-data/schema'
+        required: true
+      responses:
+        "200":
+          description: A successful response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_2'
+        default:
+          description: An unexpected error response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/runtimeError'
+      x-openapi-router-controller: controllers.jobs_service_controller
+  /api/{organization_id}/platform/jobs/users/bulk-delete:
+    post:
+      tags:
+      - JobsService
+      summary: Bulk delete user job call
+      operationId: jobs_users_bulk_delete
+      parameters:
+      - name: organization_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/users_bulkdelete_body'
         required: true
       responses:
         "200":
@@ -4267,9 +4301,11 @@ components:
       properties:
         ts_from:
           type: string
+          description: conditions scope of Audit log TS (start)
           example: 2024-06-01 00:00:00
         ts_to:
           type: string
+          description: conditions scope of Audit log TS (end)
           example: 2024-06-30 23:59:59
     AuditLogDownloadList:
       type: object
@@ -4471,11 +4507,14 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/roleUser'
-    users_import_body:
+    users_bulkdelete_body:
+      required:
+      - import_file
       type: object
       properties:
         import_file:
           type: string
+          description: The file image is in Excel format.
           format: binary
     inline_response_200_22:
       allOf:
